math-core/tests/snapshots/error_test__ampersand_in_gather.snap
---
source: math-core/tests/error_test.rs
expression: "\\begin{gather}1&1\\\\1\\end{gather}"
---
Position: 15
CannotBeUsedHere {
    got: NewColumn,
    correct_place: TableEnv,
}
