math-core/tests/snapshots/error_test__ampersand_in_multline.snap
---
source: math-core/tests/error_test.rs
expression: "\\begin{multline}1&1\\end{multline}"
---
Position: 17
CannotBeUsedHere {
    got: NewColumn,
    correct_place: TableEnv,
}
