math-core/tests/snapshots/error_test__ampersand_outside_array.snap
---
source: math-core/tests/error_test.rs
expression: x & y
---
Position: 2
CannotBeUsedHere {
    got: NewColumn,
    correct_place: TableEnv,
}
