math-core/tests/snapshots/error_test__curly_close_without_open.snap
---
source: math-core/tests/error_test.rs
expression: "}"
---
Position: 0
UnexpectedClose(
    GroupEnd,
)
