math-core/tests/snapshots/error_test__digits_unknown_cmd.snap
---
source: math-core/tests/error_test.rs
expression: "1.1\\asdf"
---
Position: 3
UnknownCommand(
    "asdf",
)
