math-core/tests/snapshots/error_test__double_sub.snap
---
source: math-core/tests/error_test.rs
expression: x__3
---
Position: 2
CannotBeUsedHere {
    got: Underscore,
    correct_place: AfterOpOrIdent,
}
