math-core/tests/snapshots/error_test__end_without_open.snap
---
source: math-core/tests/error_test.rs
expression: "\\end{matrix}"
---
Position: 0
UnexpectedClose(
    End,
)
