math-core/tests/snapshots/error_test__genfrac_wrong_unit.snap
---
source: math-core/tests/error_test.rs
expression: "\\genfrac(]{1pg}{2}{a+b}{c+d}"
---
Position: 10
ExpectedLength
