math-core/tests/snapshots/error_test__hash_outside_macro_definition.snap
---
source: math-core/tests/error_test.rs
expression: "x # y"
---
Position: 2
MacroParameterOutsideCustomCommand
