math-core/tests/snapshots/error_test__hspace_empty.snap
---
source: math-core/tests/error_test.rs
expression: "\\hspace{  }"
---
Position: 7
ExpectedLength
