math-core/tests/snapshots/error_test__hspace_non_ascii.snap
---
source: math-core/tests/error_test.rs
expression: "\\hspace{22öm}"
---
Position: 7
DisallowedChars
