math-core/tests/snapshots/error_test__hspace_non_digits.snap
---
source: math-core/tests/error_test.rs
expression: "\\hspace{2b2cm}"
---
Position: 7
ExpectedLength
